fixed vertical alignment issues with navigation items (#41)

--- a/app/styles/blocks/navigation.scss
+++ b/app/styles/blocks/navigation.scss
@@ -17,6 +17,7 @@
 
   &-block {
     // border: 4px solid rgba(151,146,60,.5);
+    align-items: flex-end;
     border-radius: 5px 5px 0 0;
     background-color: #e7e175;
     border-bottom: 0;
